# api_casa_dados

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/v1/: routers.py
app/api/v1/routes/: advanced_search.py  basic_search.py  city.py  download_excel.py  user.py
app/core/: settings.py
app/db/: mongodb.py
app/helpers/: create_excel.py  scraping_casa_dados.py  utils.py
app/models/: __init__.py  user.py
app/schemas/: schema_city.py  schema_scraping.py  schema_user.py
excel/: advanced_search.xlsx  basic_search.xlsx
